@@ -633,7 +633,7 @@ public class SettingTable extends JPanel implements ListSelectionListener, Table
 					currGroupCount++;
 					if(!po.getSettingOwnerName().equals(""))ownerList += "\'"+po.getSettingOwnerName()+"\'";
 					tempName = po.getSettingOwnerClassName();
-					groupStarts.add(new Integer(0));
+					groupStarts.add(Integer.valueOf(0));
 				}
 				else if(po.getSettingOwnerID() == last.getSettingOwnerID())
 				{
@@ -650,12 +650,12 @@ public class SettingTable extends JPanel implements ListSelectionListener, Table
 					tempName+=" "+ownerList+"";
 					ownerList = "";
 					groupNames.add(tempName);
-					groupSizes.add(new Integer(currGroupCount));
+					groupSizes.add(Integer.valueOf(currGroupCount));
 					currGroupCount = 0;
 					currGroupCount++;
 					ownerList += "\'"+po.getSettingOwnerName()+"\'";
 					if(!po.getSettingOwnerName().equals(""))tempName = po.getSettingOwnerClassName()+" \'"+po.getSettingOwnerName()+"\'";
-					groupStarts.add(new Integer(index));
+					groupStarts.add(Integer.valueOf(index));
 				}
 				last = po;
 				index++;
@@ -664,7 +664,7 @@ public class SettingTable extends JPanel implements ListSelectionListener, Table
 			{
 				tempName += " "+ownerList+"";
 				groupNames.add(tempName);
-				groupSizes.add(new Integer(currGroupCount));
+				groupSizes.add(Integer.valueOf(currGroupCount));
 			}
 			if(currentGroup > owners.size()-1) currentGroup = 0;
 			comboModel = new DefaultComboBoxModel(groupNames.toArray());
@@ -693,7 +693,7 @@ public class SettingTable extends JPanel implements ListSelectionListener, Table
 					currGroupCount++;
 					if(!po.getSettingOwnerName().equals(""))ownerList += "\'"+po.getSettingOwnerName()+"\'";
 					tempName = po.getSettingOwnerClassName();
-					//groupStarts.add(new Integer(0));
+					//groupStarts.add(Integer.valueOf(0));
 				}
 				else if(po.getSettingOwnerID() == last.getSettingOwnerID())
 				{
@@ -711,12 +711,12 @@ public class SettingTable extends JPanel implements ListSelectionListener, Table
 					ownerList = "";
 					groupNames.add(tempName);
 					//System.out.println("adding: "+tempName);
-					//groupSizes.add(new Integer(currGroupCount));
+					//groupSizes.add(Integer.valueOf(currGroupCount));
 					currGroupCount = 0;
 					currGroupCount++;
 					ownerList += "\'"+po.getSettingOwnerName()+"\'";
 					if(!po.getSettingOwnerName().equals(""))tempName = po.getSettingOwnerClassName()+" \'"+po.getSettingOwnerName()+"\'";
-					//groupStarts.add(new Integer(index));
+					//groupStarts.add(Integer.valueOf(index));
 				}
 				last = po;
 				index++;
@@ -726,7 +726,7 @@ public class SettingTable extends JPanel implements ListSelectionListener, Table
 				tempName += " "+ownerList+"";
 				groupNames.add(tempName);
 				//System.out.println("adding "+tempName);
-				//groupSizes.add(new Integer(currGroupCount));
+				//groupSizes.add(Integer.valueOf(currGroupCount));
 			}
 			//if(currentGroup > owners.size()-1) currentGroup = 0;
 			comboModel = new DefaultComboBoxModel(groupNames.toArray());
